--- a/src/Blazocious.Test/Blazocious.Test.csproj
+++ b/src/Blazocious.Test/Blazocious.Test.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="bunit" Version="1.39.5" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
