--- a/src/Blazocious.Test/Styles/default.yaml
+++ b/src/Blazocious.Test/Styles/default.yaml
@@ -39,3 +39,9 @@ md:
     - background-color: '#ffffff'
     - border-radius: '0.5rem'
     - padding: '1rem'
+  
+test-component:
+  styles:
+    - background-color: '#ffffff'
+    - border-radius: '0.5rem'
+    - padding: '1rem'
